--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,11 @@
 !.gitignore
 !LICENSE
 !README.md
+
 !swarmnet/
+!swarmnet/__init__.py
+!swarmnet/discovery.py
+!swarmnet/logger.py
+
+!examples
+!examples/discovery_example.py
